--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -6,17 +6,19 @@
   "app.components.AboutPageComponents.header": "This is the AboutPageComponents component !",
   "app.components.AboutPageComponents.inspiration": "# INSPIRATION\nThis toolbox was inspired by the [Beautiful Trouble book and website](http://beautifultrouble.org/). The scope has been expanded to involve a more diverse group of activists as both makers and users of the toolkit.",
   "app.components.AboutPageComponents.ipsum": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariaturSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima",
-  "app.components.AboutPageComponents.ourAdvisoryNetworkHeader": "Our Advisory Network",
-  "app.components.AboutPageComponents.ourProcessHeader": "Our Process",
-  "app.components.AboutPageComponents.ourTeamHeader": "Our Team",
+  "app.components.AboutPageComponents.ourAdvisoryNetworkHeader": "WHO’S IN OUR ADVISORY NETWORK?",
+  "app.components.AboutPageComponents.ourProcessHeader": "HOW DID WE MAKE THE TOOLBOX?",
+  "app.components.AboutPageComponents.ourTeamHeader": "WHO’S ON OUR TEAM?",
   "app.components.AboutPageComponents.ourValuesHeader": "WHAT ARE OUR VALUES?",
-  "app.components.AboutPageComponents.partnersHeader": "Partners",
+  "app.components.AboutPageComponents.participantsHeader": "PARTICIPANTS + WORKSHOPS INVOLVED",
+  "app.components.AboutPageComponents.partnersHeader": "WHO ARE OUR NETWORK PARTNERS?",
   "app.components.AboutPageComponents.prototyping": "# PROTOTYPING\nIn each jam session, low-fidelity prototypes of the toolbox were presented to activists to take apart and put back together based on their needs and challenges.",
   "app.components.AboutPageComponents.realization": "# REALIZATION\nEarly prototypes evolved into multiple iterations of what’s currently a [game](https://beautifulrising.org/platforms/game), [chatbot](https://beautifulrising.org/platforms/chatbot), and website. With your help, the content and the form will continue to evolve!",
   "app.components.AboutPageComponents.theToolboxHeader": "The Toolbox",
   "app.components.Body.header": "This is the Body component !",
   "app.components.ContributeMenu.header": "Contribute",
   "app.components.ContributeMenu.howItWorks": "How does it work?",
+  "app.components.ContributeType.header": "This is the ContributeType component !",
   "app.components.Footer.footer": "Beautiful Rising by Beautiful Rising, various authors is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. Permissions beyond the scope of this license may be available at beautifulrising.org. Documentation for the application programming interface (API) that powers Beautiful Rising can be [found on GitHub](https://github.com/BeautifulTrouble/api-docs#api-documentation-for-the-various-beautiful-projects).",
   "app.components.Header.aboutLink": "About",
   "app.components.Header.header": "BeautifulRising",
@@ -24,16 +26,21 @@
   "app.components.Header.logo": "en",
   "app.components.IconButton.header": "This is the IconButton component !",
   "app.components.Link.header": "This is the Link component !",
+  "app.components.Logo.header": "This is the Logo component !",
+  "app.components.Logo.language": "en",
   "app.components.Menu.advisoryNetMenu": "Our Advisory Network",
   "app.components.Menu.btaaMenu": "Beautiful Trouble + AA",
-  "app.components.Menu.faqMenu": "FAQ",
+  "app.components.Menu.faqMenu": "YOU STILL HAVE QUESTIONS?",
   "app.components.Menu.header": "This is the Menu component !",
+  "app.components.Menu.home": "Home",
   "app.components.Menu.partnersMenu": "Partners",
   "app.components.Menu.processMenu": "Our Process",
   "app.components.Menu.teamMenu": "Our Team",
   "app.components.Menu.toolBoxMenu": "The Toolbox",
   "app.components.Menu.valuesMenu": "Our Values",
+  "app.components.ModalMenu.header": "MENU",
   "app.components.NotFoundPage.header": "This is NotFoundPage component!",
+  "app.components.OnboardingModal.header": "This is the OnboardingModal component !",
   "app.components.PlatformsMenu.chatbot": "Chatbot",
   "app.components.PlatformsMenu.game": "Game",
   "app.components.PlatformsMenu.header": "Platforms",
@@ -45,6 +52,7 @@
   "app.components.PlatformsPageComponents.how": "How to use it",
   "app.components.PlatformsPageComponents.pdfHeader": "PDF",
   "app.components.PlatformsPageComponents.what": "What It is",
+  "app.components.RegionOptions.header": "Region",
   "app.components.SelectedToolComponents.header": "This is the SelectedToolComponents component !",
   "app.components.ToolHowToUse.header": "Why it Worked",
   "app.components.ToolKeyItems.header": "This is the ToolKeyItems component !",
@@ -83,20 +91,37 @@
   "app.components.TrainingMenu.header": "Training + Resources",
   "app.components.TrainingMenu.otherResources": "Other Resources",
   "app.components.TrainingMenu.requestTraining": "Request a Training",
+  "app.components.TypeFlagTooltip.header": "This is the TypeFlagTooltip component !",
   "app.components.TypeMenu.header": "This is the TypeMenu component !",
   "app.components.TypeMenu.stories": "Stories",
   "app.containers.AboutPage.description": "Beautiful Rising harnesses the insights of changemakers worldwide to help make our movements more strategic, creative and effective.",
   "app.containers.AboutPage.header": "ABOUT",
+  "app.containers.ContactUs.complete": "Complete",
+  "app.containers.ContactUs.header": "Contact Us",
+  "app.containers.ContactUs.submit": "Submit",
+  "app.containers.ContactUs.subscribe": "Subscribe to our newsletter.",
+  "app.containers.ContributePage.examples": "Examples of {type} that were contributed",
   "app.containers.ContributePage.header": "Contribute",
+  "app.containers.ContributePage.typeOfContent": "WHAT TYPE OF CONTENT WOULD YOU LIKE TO CONTRIBUTE?",
   "app.containers.HomePage.header": "This is Home",
+  "app.containers.HomePage.methodology": "methodology",
+  "app.containers.HomePage.principle": "principle",
   "app.containers.HomePage.sortBy": "Sort By",
+  "app.containers.HomePage.story": "story",
+  "app.containers.HomePage.tactic": "tactic",
   "app.containers.HomePage.tags": "Tags",
+  "app.containers.HomePage.theory": "theory",
   "app.containers.HomePage.viewAs": "View As",
   "app.containers.PlatformsPage.header": "Platforms",
   "app.containers.SearchField.header": "This is SearchField container !",
   "app.containers.SearchField.placeholder": "Search for keywords, ex: legislation, state repression, etc.",
+  "app.containers.SubmitRealWorldExample.description": "A brief description (150 characters)",
+  "app.containers.SubmitRealWorldExample.header": "Have you seen or used this {type}?",
+  "app.containers.SubmitRealWorldExample.title": "Give a short title for your example",
+  "app.containers.SubmitRealWorldExample.url": "copy + paste the url of the video, image, gif, audio",
   "app.containers.Tags.header": "Tags",
   "app.containers.ToolPage.addTool": "Save this tool",
+  "app.containers.ToolPage.contributedByHeader": "Contributed By",
   "app.containers.ToolPage.header": "This is ToolPage container !",
   "app.containers.ToolPage.learnMore": "Learn More",
   "app.containers.ToolPage.methodologies": "Methodologies",
@@ -117,5 +142,6 @@
   "app.containers.ToolsSortOptions.header": "This is ToolsSortOptions container !",
   "app.containers.ToolsSortOptions.newestButton": "Newest",
   "app.containers.ToolsViewOptions.header": "This is ToolsViewOptions container !",
-  "app.containers.TrainingPage.header": "TRAINING + RESOURCES"
+  "app.containers.TrainingPage.header": "TRAINING + RESOURCES",
+  "otherResources": "OTHER RESOURCES"
 }
