--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -1,39 +1,46 @@
 {
   "app.components.AboutMenu.header": "ACERCA DEL PROYECTO",
   "app.components.AboutPageComponents.beautifulTroubleAAHeader": "What’s the connection with Beautiful Trouble + ActionAid?",
-  "app.components.AboutPageComponents.definition": "# DEFINITION\nWe’ve conducted six ‘jam sessions’ around the world with diverse groups of activists to better understand the problems they’re facing and generate locally relevant content for the toolbox.",
-  "app.components.AboutPageComponents.faqHeader": "FAQ",
+  "app.components.AboutPageComponents.definition": "# Definición\nHemos llevado a cabo seis “sesiones de improvisación” por todo el mundo con diferentes grupos de activistas para entender mejor los problemas a los que se enfrentan y poder generar contenidos de interés local para la caja de herramientas.",
+  "app.components.AboutPageComponents.faqHeader": "¿TODAVÍA TIENES PREGUNTAS?",
   "app.components.AboutPageComponents.header": "This is the AboutPageComponents component !",
-  "app.components.AboutPageComponents.inspiration": "# INSPIRATION\nThis toolbox was inspired by the [Beautiful Trouble book and website](http://beautifultrouble.org/). The scope has been expanded to involve a more diverse group of activists as both makers and users of the toolkit.",
+  "app.components.AboutPageComponents.inspiration": "# Inspiración\nEsta caja de herramientas ha sido inspirada por [el libro](http://www.milrazon.es/Libros/Bella-revuelta-Beautiful-trouble.aspx) y la página web *Beautiful Trouble*](http://beautifultrouble.org/). Se ha aumentado el alcance para que pueda involucrar a un grupo más diverso de activistas, ya sea como creadores o usuarios de la caja de herramientas.",
   "app.components.AboutPageComponents.ipsum": "",
-  "app.components.AboutPageComponents.ourAdvisoryNetworkHeader": "Our Advisory Network",
+  "app.components.AboutPageComponents.ourAdvisoryNetworkHeader": "¿QUIÉN ESTÁ EN NUESTRA RED DE ASESORAMIENTO?",
   "app.components.AboutPageComponents.ourProcessHeader": "NUESTRO PROCESO",
-  "app.components.AboutPageComponents.ourTeamHeader": "Our Team",
-  "app.components.AboutPageComponents.ourValuesHeader": "WHAT ARE OUR VALUES?",
+  "app.components.AboutPageComponents.ourTeamHeader": "¿QUIÉN ESTÁ EN NUESTRO EQUIPO?",
+  "app.components.AboutPageComponents.ourValuesHeader": "¿CUÁLES SON NUESTROS VALORES?",
+  "app.components.AboutPageComponents.participantsHeader": "Participantes y talleres involucrados",
   "app.components.AboutPageComponents.partnersHeader": "Partners",
-  "app.components.AboutPageComponents.prototyping": "# PROTOTYPING\nIn each jam session, low-fidelity prototypes of the toolbox were presented to activists to take apart and put back together based on their needs and challenges.",
-  "app.components.AboutPageComponents.realization": "# REALIZATION\nEarly prototypes evolved into multiple iterations of what’s currently a [game](https://beautifulrising.org/platforms/game), [chatbot](https://beautifulrising.org/platforms/chatbot), and website. With your help, the content and the form will continue to evolve!",
+  "app.components.AboutPageComponents.prototyping": "# Hacer prototipos\nEn cada “sesión de improvisación” se han presentado prototipos de la caja de herramientas a los activistas, para que los desmontaran y volvieran a montar basándose en sus necesidades y retos",
+  "app.components.AboutPageComponents.realization": "# Realización\nLos prototipos previos evolucionaron hasta convertirse actualmente en: un [*juego*](/platforms/game), un [*bot de charla*](/platforms/chatbot) y una página web. ¡Con tu ayuda, el contenido y la forma podrán seguir evolucionando!",
   "app.components.AboutPageComponents.theToolboxHeader": "LA CAJA DE HERRAMIENTAS",
   "app.components.Body.header": "This is the Body component !",
   "app.components.ContributeMenu.header": "CONTRIBUIR",
   "app.components.ContributeMenu.howItWorks": "¿CÓMO PUEDO CONTRIBUIR?",
+  "app.components.ContributeType.header": "",
   "app.components.Footer.footer": "Beautiful Rising by Beautiful Rising, various authors is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. Permissions beyond the scope of this license may be available at beautifulrising.org. Documentation for the application programming interface (API) that powers Beautiful Rising can be [found on GitHub](https://github.com/BeautifulTrouble/api-docs#api-documentation-for-the-various-beautiful-projects).",
   "app.components.Header.aboutLink": "About",
   "app.components.Header.header": "BeautifulRising",
   "app.components.Header.homeLink": "Home",
-  "app.components.Header.logo": "en",
+  "app.components.Header.logo": "es",
   "app.components.IconButton.header": "This is the IconButton component !",
   "app.components.Link.header": "This is the Link component !",
+  "app.components.Logo.header": "",
+  "app.components.Logo.language": "es",
   "app.components.Menu.advisoryNetMenu": "NUESTRA RED DE ASESORAMIENTO",
   "app.components.Menu.btaaMenu": "BEAUTIFUL TROUBLE + AA",
   "app.components.Menu.faqMenu": "PREGUNTAS",
   "app.components.Menu.header": "This is the Menu component !",
+  "app.components.Menu.home": "",
   "app.components.Menu.partnersMenu": "SOCIOS DE RED",
   "app.components.Menu.processMenu": "NUESTRO PROCESO",
   "app.components.Menu.teamMenu": "NUESTRO EQUIPO",
   "app.components.Menu.toolBoxMenu": "LA CAJA DE HERRAMIENTAS",
   "app.components.Menu.valuesMenu": "NUESTROS VALORES",
+  "app.components.ModalMenu.header": "MENÚ",
   "app.components.NotFoundPage.header": "This is NotFoundPage component!",
+  "app.components.OnboardingModal.header": "",
   "app.components.PlatformsMenu.chatbot": "BOT DE CHARLA",
   "app.components.PlatformsMenu.game": "JUEGO",
   "app.components.PlatformsMenu.header": "PLATAFORMAS",
@@ -45,6 +52,7 @@
   "app.components.PlatformsPageComponents.how": "How to use it",
   "app.components.PlatformsPageComponents.pdfHeader": "PDF",
   "app.components.PlatformsPageComponents.what": "What It is",
+  "app.components.RegionOptions.header": "",
   "app.components.SelectedToolComponents.header": "This is the SelectedToolComponents component !",
   "app.components.ToolHowToUse.header": "Why it Worked",
   "app.components.ToolKeyItems.header": "This is the ToolKeyItems component !",
@@ -58,23 +66,23 @@
   "app.components.ToolSnapshotArea.viewForm": "Go to Form",
   "app.components.ToolTypeAllFull.header": "This is the ToolTypeAllFull component !",
   "app.components.ToolTypeAllPartial.header": "This is the ToolTypeAllPartial component !",
-  "app.components.ToolTypeArea.allHead": "All",
+  "app.components.ToolTypeArea.allHead": "Todos",
   "app.components.ToolTypeArea.header": "This is the ToolTypeArea component !",
-  "app.components.ToolTypeArea.methodologiesDesc": "Strategic frameworks and hands-on exercises to help you assess your situation and plan your campaign.",
-  "app.components.ToolTypeArea.methodologiesHead": "Methodologies",
-  "app.components.ToolTypeArea.methodologiesLong": "“If you don't know where you’re going, you'll end up someplace else.” ―Yogi Berra Tactics are fun, but if you haven’t first identified goals and mapped out your strategy for how to achieve them, even the most engaging tactic won’t get you closer to where you want to go. That’s where these exercises and strategic frameworks come in: they are tools to help you better understand your situation, plan your next steps, assess your progress, and, eventually, win.",
-  "app.components.ToolTypeArea.principlesDesc": "Time-tested guidelines for how to design successful actions and campaigns.",
-  "app.components.ToolTypeArea.principlesHead": "Principles",
-  "app.components.ToolTypeArea.principlesLong": "After decades of battles won and lost, veteran creative activists tend to acquire a set of mental shortcuts for how to design successful actions and campaigns. These hard-won insights are not strict rules, but rather loose guidelines to keep in mind as you design your own actions.",
-  "app.components.ToolTypeArea.storiesDesc": "Accounts of memorable actions and campaigns, analysing what worked, or didn’t, and why.",
-  "app.components.ToolTypeArea.storiesHead": "Stories",
-  "app.components.ToolTypeArea.storiesLong": "Revolutionaries practice without safety nets. Our laboratory is the world around us – the streets, the Internet, the airwaves, our own hearts. We experiment, we fail, we readjust, we try again, maybe this time a little less disastrously, a little more beautifully – until eventually, we win. Always we learn. In these stories we share what we’ve learned.",
-  "app.components.ToolTypeArea.tacticsDesc": "Specific forms of creative action, such as a flash mob or blockade.",
-  "app.components.ToolTypeArea.tacticsHead": "Tactics",
-  "app.components.ToolTypeArea.tacticsLong": "Every discipline has its forms of action: ballet dancers lunge and pirouette; boxers throw jabs and uppercuts. Likewise, creative activists have their own forms of action. Some, like a sit-in, march or picket line, have been used for generations. Others, like flash mobs and hashtag campaigns, are recent innovations. As with ballet or boxing, a single tactic, no matter how well executed, rarely wins the day. Victory comes, if it comes, through creative combination and variation.",
-  "app.components.ToolTypeArea.theoriesDesc": "Big-picture ideas that help us understand how the world works and how we might change it.",
-  "app.components.ToolTypeArea.theoriesHead": "Theories",
-  "app.components.ToolTypeArea.theoriesLong": "“There’s nothing so practical as a good theory.” —George Lakey Ever wished someone would take the most important ideas from revolutionary thinkers like Paulo Freire, Arundhati Roy, and Antonio Gramsci, and cook them down into fierce, accessible nuggets of theory, tailored to the pragmatic needs of the everyday troublemaker? Look no further.",
+  "app.components.ToolTypeArea.methodologiesDesc": "Marcos y ejercicios prácticos y estratégicos para ayudarte a evaluar tu situación y planificar tu campaña.",
+  "app.components.ToolTypeArea.methodologiesHead": "METODOLOGÍAS",
+  "app.components.ToolTypeArea.methodologiesLong": "“No hay nada tan práctico como una buena teoría” (George Lakey) ¿Alguna vez has deseado que alguien tomara las ideas más importantes de pensadores revolucionarios como Paulo Freire, Arundhati Roy y Antonio Gramsci y las organizara en píldoras teóricas efectivas y accesibles, ajustadas a las necesidades pragmáticas de los alborotadores comunes y corrientes? No busques más.",
+  "app.components.ToolTypeArea.principlesDesc": "Guías reconocidas y probadas para diseñar acciones y campañas exitosas.",
+  "app.components.ToolTypeArea.principlesHead": "PRINCIPIOS",
+  "app.components.ToolTypeArea.principlesLong": "Tras décadas de ganar y perder batallas, los activistas creativos veteranos tienden a adquirir un conjunto de atajos mentales para diseñar acciones y campañas exitosas. Estos conocimientos tan duramente adquiridos no son normas estrictas, sino más bien guías generales a tener en cuenta cuando diseñes tus propias acciones.",
+  "app.components.ToolTypeArea.storiesDesc": "Constancia de las acciones y campañas memorables que analiza qué funcionó, qué no y por qué.",
+  "app.components.ToolTypeArea.storiesHead": "Historias",
+  "app.components.ToolTypeArea.storiesLong": "Los revolucionarios practicamos sin red de seguridad. Nuestro laboratorio es el mundo que nos rodea: las calles, Internet, las ondas de radio, nuestros propios corazones. Experimentamos, fallamos, hacemos reajustes, volvemos a intentarlo (quizá cada vez siendo un poco menos desastrosos, un poco más creativos)… hasta que, finalmente, ganamos. Siempre aprendemos. En estas historias compartimos lo que hemos aprendido.",
+  "app.components.ToolTypeArea.tacticsDesc": "Formas específicas de acción creativa, como un flashmob o un bloqueo.",
+  "app.components.ToolTypeArea.tacticsHead": "TÁCTICAS",
+  "app.components.ToolTypeArea.tacticsLong": "Toda disciplina tiene sus formas de acción: los bailarines de ballet saltan y hacen piruetas; los boxeadores lanzan golpes y ganchos. De igual modo, los activistas creativos tienen sus propias formas de acción. Algunas de ellas, como las sentadas, manifestaciones o líneas de piquete se han usado desde hace generaciones. Otras, como los flashmobs y las campañas de etiquetas (hashtags) en redes sociales, son innovaciones recientes. Al igual que ocurre con el ballet y el boxeo, una sola táctica, sin importar lo bien que se ejecute, en raras ocasiones tiene éxito. La victoria llega, si es que llega, mediante la combinación y variación creativa.",
+  "app.components.ToolTypeArea.theoriesDesc": "Ideas con una visión de conjunto que nos ayudan a comprender cómo funciona el mundo y cómo podríamos cambiarlo.",
+  "app.components.ToolTypeArea.theoriesHead": "TEORÍAS",
+  "app.components.ToolTypeArea.theoriesLong": "“No hay nada tan práctico como una buena teoría” (George Lakey) ¿Alguna vez has deseado que alguien tomara las ideas más importantes de pensadores revolucionarios como Paulo Freire, Arundhati Roy y Antonio Gramsci y las organizara en píldoras teóricas efectivas y accesibles, ajustadas a las necesidades pragmáticas de los alborotadores comunes y corrientes? No busques más.",
   "app.components.ToolTypeSelectedFull.header": "This is the ToolTypeSelectedFull component !",
   "app.components.ToolTypeSelectedPartial.header": "This is the ToolTypeSelectedPartial component !",
   "app.components.ToolsComponents.header": "This is the ToolsComponents component !",
@@ -83,39 +91,57 @@
   "app.components.TrainingMenu.header": "CAPACITACIÓN + RECURSOS",
   "app.components.TrainingMenu.otherResources": "OTROS RECURSOS",
   "app.components.TrainingMenu.requestTraining": "SOLICITA UNA CAPACITACIÓN",
+  "app.components.TypeFlagTooltip.header": "",
   "app.components.TypeMenu.header": "This is the TypeMenu component !",
-  "app.components.TypeMenu.stories": "Stories",
+  "app.components.TypeMenu.stories": "Historias",
   "app.containers.AboutPage.description": "Beautiful Rising harnesses the insights of changemakers worldwide to help make our movements more strategic, creative and effective.",
-  "app.containers.AboutPage.header": "ABOUT",
-  "app.containers.ContributePage.header": "Contribute",
+  "app.containers.AboutPage.header": "ACERCA DEL PROYECTO",
+  "app.containers.ContactUs.complete": "",
+  "app.containers.ContactUs.header": "CONTÁCTANOS",
+  "app.containers.ContactUs.submit": "ENVIAR",
+  "app.containers.ContactUs.subscribe": "Suscríbete a nuestro boletín",
+  "app.containers.ContributePage.examples": "",
+  "app.containers.ContributePage.header": "CONTRIBUIR",
+  "app.containers.ContributePage.typeOfContent": "",
   "app.containers.HomePage.header": "This is Home",
-  "app.containers.HomePage.sortBy": "Sort By",
-  "app.containers.HomePage.tags": "Tags",
-  "app.containers.HomePage.viewAs": "View As",
-  "app.containers.PlatformsPage.header": "Platforms",
+  "app.containers.HomePage.methodology": "METODOLOGÍA",
+  "app.containers.HomePage.principle": "PRINCIPIO",
+  "app.containers.HomePage.sortBy": "Ordenar por",
+  "app.containers.HomePage.story": "historia",
+  "app.containers.HomePage.tactic": "TÁCTICA",
+  "app.containers.HomePage.tags": "Etiquetas",
+  "app.containers.HomePage.theory": "TEORÍA",
+  "app.containers.HomePage.viewAs": "Ver como",
+  "app.containers.PlatformsPage.header": "PLATAFORMAS",
   "app.containers.SearchField.header": "This is SearchField container !",
-  "app.containers.SearchField.placeholder": "Search for keywords, ex: legislation, state repression, etc.",
+  "app.containers.SearchField.placeholder": "Buscar palabras clave, como por ejemplo: legislación, represión estatal, etc.",
+  "app.containers.SubmitRealWorldExample.description": "",
+  "app.containers.SubmitRealWorldExample.header": "",
+  "app.containers.SubmitRealWorldExample.title": "",
+  "app.containers.SubmitRealWorldExample.url": "",
   "app.containers.Tags.header": "Tags",
   "app.containers.ToolPage.addTool": "Save this tool",
+  "app.containers.ToolPage.contributedByHeader": "",
   "app.containers.ToolPage.header": "This is ToolPage container !",
   "app.containers.ToolPage.learnMore": "Learn More",
-  "app.containers.ToolPage.methodologies": "Methodologies",
-  "app.containers.ToolPage.principles": "Principles",
+  "app.containers.ToolPage.methodologies": "METODOLOGÍAS",
+  "app.containers.ToolPage.principles": "PRINCIPIOS",
   "app.containers.ToolPage.realWorldExamplesOf": "Real World Examples of \"{title}\"",
   "app.containers.ToolPage.relatedTools": "Related Tools",
   "app.containers.ToolPage.removeTool": "Remove this text from your saved tools",
   "app.containers.ToolPage.showLess": "Show Less",
   "app.containers.ToolPage.showMore": "Show More",
-  "app.containers.ToolPage.stories": "Stories",
-  "app.containers.ToolPage.tactics": "Tactics",
-  "app.containers.ToolPage.tags": "Tags",
-  "app.containers.ToolPage.theories": "Theories",
+  "app.containers.ToolPage.stories": "Historias",
+  "app.containers.ToolPage.tactics": "TÁCTICAS",
+  "app.containers.ToolPage.tags": "Etiquetas",
+  "app.containers.ToolPage.theories": "TEORÍAS",
   "app.containers.Tools.header": "This is Tools container !",
   "app.containers.Tools.myTools": "My Tools",
   "app.containers.Tools.newsFeed": "News Feed",
-  "app.containers.ToolsSortOptions.alphabeticalButton": "Alphabetical",
+  "app.containers.ToolsSortOptions.alphabeticalButton": "Alfabético",
   "app.containers.ToolsSortOptions.header": "This is ToolsSortOptions container !",
-  "app.containers.ToolsSortOptions.newestButton": "Newest",
+  "app.containers.ToolsSortOptions.newestButton": "Más reciente",
   "app.containers.ToolsViewOptions.header": "This is ToolsViewOptions container !",
-  "app.containers.TrainingPage.header": "TRAINING + RESOURCES"
+  "app.containers.TrainingPage.header": "TRAINING + RESOURCES",
+  "otherResources": ""
 }
