--- a/app/translations/fr.json
+++ b/app/translations/fr.json
@@ -10,6 +10,7 @@
   "app.components.AboutPageComponents.ourProcessHeader": "",
   "app.components.AboutPageComponents.ourTeamHeader": "",
   "app.components.AboutPageComponents.ourValuesHeader": "",
+  "app.components.AboutPageComponents.participantsHeader": "",
   "app.components.AboutPageComponents.partnersHeader": "",
   "app.components.AboutPageComponents.prototyping": "",
   "app.components.AboutPageComponents.realization": "",
@@ -17,6 +18,7 @@
   "app.components.Body.header": "",
   "app.components.ContributeMenu.header": "",
   "app.components.ContributeMenu.howItWorks": "",
+  "app.components.ContributeType.header": "",
   "app.components.Footer.footer": "",
   "app.components.Header.aboutLink": "",
   "app.components.Header.header": "",
@@ -24,16 +26,21 @@
   "app.components.Header.logo": "",
   "app.components.IconButton.header": "",
   "app.components.Link.header": "",
+  "app.components.Logo.header": "",
+  "app.components.Logo.language": "",
   "app.components.Menu.advisoryNetMenu": "",
   "app.components.Menu.btaaMenu": "",
   "app.components.Menu.faqMenu": "",
   "app.components.Menu.header": "",
+  "app.components.Menu.home": "",
   "app.components.Menu.partnersMenu": "",
   "app.components.Menu.processMenu": "",
   "app.components.Menu.teamMenu": "",
   "app.components.Menu.toolBoxMenu": "",
   "app.components.Menu.valuesMenu": "",
+  "app.components.ModalMenu.header": "",
   "app.components.NotFoundPage.header": "",
+  "app.components.OnboardingModal.header": "",
   "app.components.PlatformsMenu.chatbot": "",
   "app.components.PlatformsMenu.game": "",
   "app.components.PlatformsMenu.header": "",
@@ -45,6 +52,7 @@
   "app.components.PlatformsPageComponents.how": "",
   "app.components.PlatformsPageComponents.pdfHeader": "",
   "app.components.PlatformsPageComponents.what": "",
+  "app.components.RegionOptions.header": "",
   "app.components.SelectedToolComponents.header": "",
   "app.components.ToolHowToUse.header": "",
   "app.components.ToolKeyItems.header": "",
@@ -83,20 +91,37 @@
   "app.components.TrainingMenu.header": "",
   "app.components.TrainingMenu.otherResources": "",
   "app.components.TrainingMenu.requestTraining": "",
+  "app.components.TypeFlagTooltip.header": "",
   "app.components.TypeMenu.header": "",
   "app.components.TypeMenu.stories": "",
   "app.containers.AboutPage.description": "",
   "app.containers.AboutPage.header": "",
+  "app.containers.ContactUs.complete": "",
+  "app.containers.ContactUs.header": "",
+  "app.containers.ContactUs.submit": "",
+  "app.containers.ContactUs.subscribe": "",
+  "app.containers.ContributePage.examples": "",
   "app.containers.ContributePage.header": "",
+  "app.containers.ContributePage.typeOfContent": "",
   "app.containers.HomePage.header": "",
+  "app.containers.HomePage.methodology": "",
+  "app.containers.HomePage.principle": "",
   "app.containers.HomePage.sortBy": "",
+  "app.containers.HomePage.story": "",
+  "app.containers.HomePage.tactic": "",
   "app.containers.HomePage.tags": "",
+  "app.containers.HomePage.theory": "",
   "app.containers.HomePage.viewAs": "",
   "app.containers.PlatformsPage.header": "",
   "app.containers.SearchField.header": "",
   "app.containers.SearchField.placeholder": "",
+  "app.containers.SubmitRealWorldExample.description": "",
+  "app.containers.SubmitRealWorldExample.header": "",
+  "app.containers.SubmitRealWorldExample.title": "",
+  "app.containers.SubmitRealWorldExample.url": "",
   "app.containers.Tags.header": "",
   "app.containers.ToolPage.addTool": "",
+  "app.containers.ToolPage.contributedByHeader": "",
   "app.containers.ToolPage.header": "",
   "app.containers.ToolPage.learnMore": "",
   "app.containers.ToolPage.methodologies": "",
@@ -117,5 +142,6 @@
   "app.containers.ToolsSortOptions.header": "",
   "app.containers.ToolsSortOptions.newestButton": "",
   "app.containers.ToolsViewOptions.header": "",
-  "app.containers.TrainingPage.header": ""
+  "app.containers.TrainingPage.header": "",
+  "otherResources": ""
 }
