--- a/app/translations/fr.json
+++ b/app/translations/fr.json
@@ -18,6 +18,7 @@
   "app.components.Body.header": "",
   "app.components.ContributeMenu.header": "",
   "app.components.ContributeMenu.howItWorks": "",
+  "app.components.ContributeType.callToAction": "",
   "app.components.ContributeType.header": "",
   "app.components.Footer.footer": "",
   "app.components.Header.aboutLink": "",
@@ -40,6 +41,18 @@
   "app.components.Menu.valuesMenu": "",
   "app.components.ModalMenu.header": "",
   "app.components.NotFoundPage.header": "",
+  "app.components.OnboardingContent.advisoryNetwork": "",
+  "app.components.OnboardingContent.btaa": "",
+  "app.components.OnboardingContent.faq": "",
+  "app.components.OnboardingContent.header": "",
+  "app.components.OnboardingContent.howDidWeMake": "",
+  "app.components.OnboardingContent.onboardedMessage": "",
+  "app.components.OnboardingContent.partners": "",
+  "app.components.OnboardingContent.team": "",
+  "app.components.OnboardingContent.toolbox": "",
+  "app.components.OnboardingContent.values": "",
+  "app.components.OnboardingContent.welcomeMessage": "",
+  "app.components.OnboardingContent.welcomeSpiel": "",
   "app.components.OnboardingModal.header": "",
   "app.components.PlatformsMenu.chatbot": "",
   "app.components.PlatformsMenu.game": "",
@@ -103,9 +116,15 @@
   "app.containers.ContributePage.examples": "",
   "app.containers.ContributePage.header": "",
   "app.containers.ContributePage.typeOfContent": "",
+  "app.containers.EmailTools.complete": "",
+  "app.containers.EmailTools.header": "",
+  "app.containers.EmailTools.instruction": "",
+  "app.containers.EmailTools.submit": "",
+  "app.containers.HomePage.clearSearch": "",
   "app.containers.HomePage.header": "",
   "app.containers.HomePage.methodology": "",
   "app.containers.HomePage.principle": "",
+  "app.containers.HomePage.searchResults": "",
   "app.containers.HomePage.sortBy": "",
   "app.containers.HomePage.story": "",
   "app.containers.HomePage.tactic": "",
@@ -117,6 +136,8 @@
   "app.containers.SearchField.placeholder": "",
   "app.containers.SubmitRealWorldExample.description": "",
   "app.containers.SubmitRealWorldExample.header": "",
+  "app.containers.SubmitRealWorldExample.instruction": "",
+  "app.containers.SubmitRealWorldExample.submit": "",
   "app.containers.SubmitRealWorldExample.title": "",
   "app.containers.SubmitRealWorldExample.url": "",
   "app.containers.Tags.header": "",
@@ -138,6 +159,8 @@
   "app.containers.Tools.header": "",
   "app.containers.Tools.myTools": "",
   "app.containers.Tools.newsFeed": "",
+  "app.containers.Tools.remove": "",
+  "app.containers.Tools.share": "",
   "app.containers.ToolsSortOptions.alphabeticalButton": "",
   "app.containers.ToolsSortOptions.header": "",
   "app.containers.ToolsSortOptions.newestButton": "",
