--- a/app/translations/fr.json
+++ b/app/translations/fr.json
@@ -166,5 +166,5 @@
   "app.containers.ToolsSortOptions.newestButton": "",
   "app.containers.ToolsViewOptions.header": "",
   "app.containers.TrainingPage.header": "",
-  "otherResources": ""
+  "app.containers.TrainingPage.otherResources": ""
 }
